# Jaat

./: .gitignore  .replit  DEPLOYMENT_GUIDE.md  README.md  add_chai_coffee.py  app.py  auto_repair_system.py  clean_and_fill_1000.py  corrected_fill.py  fill_gap_generator.py  final_600_generator.py  final_sync_database.py  fix_and_fill_1034.py  food_selection.html  full_diagnostic.py  generate_425_orders.py  generate_600_orders.py  generate_feedback_500.py  generate_feedback_750.py  generate_students_and_orders.py  index.html  pyproject.toml  replit.md  requirements.txt  safe_cleanup.py  save_food_images.py  staff_menu_management.html  staff_orders_dashboard.html  staff_view.html  student_info.html  student_reset_and_sync.py  style2.css  test_connection.py  thank_you.html  unique_600_generator.py  update_menu.py  verbose_1000_fill.py  verified_feedback_250.py  verified_feedback_cleanup_and_fill.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1765198054836.txt  Pasted--File-home-runner-workspace-pythonlibs-lib-python3-11-s_1765036750072.txt  Pasted-CANTEEN-ORDERS-REPORT-This-Year-Generated-December-21-2_1766330553906.txt  Pasted-Enhance-User-Experience-and-Design-Simplify-the-Interface-A-clean-intuitive-design-helps-users-n-1764403344161_1764403344162.txt  Pasted-I-want-to-upgrade-the-User-Experience-UX-of-the-entire-_1767159338924.txt  Pasted-Order-Placement-Error-quantity-Traceback-most-recent-ca_1765083980828.txt  Pasted-TemplateNotFound-jinja2-exceptions-TemplateNotFound-stu_1765038032557.txt  (+1 more)
static/: database.js  style2.css  (+1 more)
(+20 files in other folders)
